    suggested by Andreas Mair.
  * %search.series% returns 1 or 0 depending on the flag "series recording" of a search and
    can be used in the directory entry of a search or it's depending variables.
- new command 'connect' within internal variables: with this command you can connect to
  a TCP service, pass data and assign the result to a variable. See the MANUAL for 
  details.
- in memory to pat: french translation update, thanks to Patrice Staudt
- italian translation update, thanks to Diego Pierotto
- finnish translation update, thanks to Rolf Ahrenberg and Ville Skyttä
- new lithuanian translation, thanks to Valdemaras Pipiras 
- new slovak translation, thanks to Milan Hrala
- new SVDRP command 'MENU [NOW|PRG|SUM]' to call one of the main OSD menus or 
  the summary of the current event. If any epgsearch menu is open a subsequent
  SVDRP call will close it again.
- changed the maximum number of days for a timer conflict check from 99 to 14
- patch by Jörg Wendel for new graphtft patch
- Two events with both empty episode names are now handled different within the 
  feature 'Avoid repeats'. This will result in more recordings, but ensures not to 
  miss one only because of a buggy EPG.
- searchtimers: if a timers filename results in an empty string or contains 
  "!^invalid^!" it will be skipped for programming now.
- Avoid repeats: 'Compare subtitle' has now a third value 'if present' besides 'no'
  and 'yes'. With this setting epgsearch will classify two events only as equal if 
  their episode names match and are not empty. Caution: if your EPG data has no episode 
  names for different episodes don't use this option! 'yes' will then be the better
  choice even if this results in double recordings.
- epgsearch now uses the shutdown handler (introduced in vdr 1.5.1) to prevent a 
  search timer update to be interrupted.
- the SVDRP command UPDS for triggering search timer updates has now a new option 